enhance CI/CD version v2: TEST